<resources>
    <string name="app_name">GistList</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_gits_detail">GistDetailActivity</string>

    <string name="error_empty_gist">Empty Gist</string>
    <string name="error_empty_history">Empty History</string>
    <string name="error_gist_data">Error while downloading Gist\'s data</string>
    <string name="error_gist_information">Error while setting Gist Information</string>
    <string name="error_owner_data">Error while downloading Owner\'s data</string>
    <string name="gist_detail_content">Content</string>
    <string name="gist_detail_created_at">Created At: </string>
    <string name="gist_detail_description">Description: </string>
    <string name="gist_detail_file_language">File Language: </string>
    <string name="gist_detail_file_name">File Name: </string>
    <string name="gist_detail_file_type">File Type: </string>
    <string name="gist_detail_gist_title">Gist</string>
    <string name="gist_detail_history">History</string>
    <string name="gist_detail_history_additions">Additions: </string>
    <string name="gist_detail_history_committed_at">Committed at: </string>
    <string name="gist_detail_history_deletions">Deletions: </string>
    <string name="gist_detail_history_total_changes">Total Changes: </string>
    <string name="gist_detail_history_version">Version: </string>
    <string name="gist_detail_login">Login: </string>
    <string name="gist_detail_name">Name: </string>
    <string name="gist_detail_user_title">User</string>
    <string name="gist_detail_updated_at">Updated At: </string>
    <string name="menu_about">About</string>
    <string name="menu_developer">Developer</string>
    <string name="not_available">N/A</string>
    <string name="offline_mode">No internet Connection. The app will work in offline mode.</string>
    <string name="permission_revoked_internet">No permission to connect to the internet\nCheck your app permissions in Android settings</string>
    <string name="permission_revoked_read_external_storage">No permission to read external storage\nCheck your app permissions in Android settings</string>
    <string name="permission_revoked_write_external_storage">No permission to write external storage\nCheck your app permissions in Android settings</string>
    <string name="title_activity_about">AboutActivity</string>

</resources>
