<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/svDetails"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:scrollbars="none"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.v7.widget.CardView
        android:id="@+id/cvDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/distance_to_view_normal"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="@dimen/card_view_elevation">

        <LinearLayout
            android:id="@+id/llDetails"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llOwnerDetails"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvUserTitle"
                    style="@style/RobotoBold"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/gist_detail_user_title"
                    android:textSize="23sp" />

                <GridLayout
                    android:id="@+id/gvUserData"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/distance_to_view_normal_x2"
                    android:alignmentMode="alignBounds"
                    android:columnCount="2">

                    <TextView
                        android:id="@+id/tvLoginTitle"
                        style="@style/RobotoBold"
                        android:layout_column="0"
                        android:layout_row="0"
                        android:text="@string/gist_detail_login"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvLogin"
                        style="@style/Roboto"
                        android:layout_column="1"
                        android:layout_row="0"
                        android:text="@string/not_available"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvNameTitle"
                        style="@style/RobotoBold"
                        android:layout_column="0"
                        android:layout_row="1"
                        android:text="@string/gist_detail_name"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvName"
                        style="@style/Roboto"
                        android:layout_column="1"
                        android:layout_row="1"
                        android:text="@string/not_available"
                        android:textSize="16sp" />

                </GridLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llGistDetails"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvGistTitle"
                    style="@style/RobotoBold"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/gist_detail_gist_title"
                    android:textSize="23sp" />

                <GridLayout
                    android:id="@+id/glGistData"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/distance_to_view_normal_x2"
                    android:alignmentMode="alignBounds"
                    android:columnCount="2">

                    <TextView
                        android:id="@+id/tvFileNameTitle"
                        style="@style/RobotoBold"
                        android:layout_column="0"
                        android:layout_row="0"
                        android:text="@string/gist_detail_file_name"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvFileName"
                        style="@style/Roboto"
                        android:layout_column="1"
                        android:layout_row="0"
                        android:maxWidth="@dimen/gist_detail_grid_column_max_width"
                        android:text="@string/not_available"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvFileTypeTitle"
                        style="@style/RobotoBold"
                        android:layout_column="0"
                        android:layout_row="1"
                        android:text="@string/gist_detail_file_type"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvFileType"
                        style="@style/Roboto"
                        android:layout_column="1"
                        android:layout_row="1"
                        android:text="@string/not_available"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvFileLanguageTitle"
                        style="@style/RobotoBold"
                        android:layout_column="0"
                        android:layout_row="2"
                        android:text="@string/gist_detail_file_language"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvFileLanguage"
                        style="@style/Roboto"
                        android:layout_column="1"
                        android:layout_row="2"
                        android:text="@string/not_available"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvCreatedAtTitle"
                        style="@style/RobotoBold"
                        android:layout_column="0"
                        android:layout_row="3"
                        android:text="@string/gist_detail_created_at"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvCreatedAt"
                        style="@style/Roboto"
                        android:layout_column="1"
                        android:layout_row="3"
                        android:text="@string/not_available"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvUpdatedAtTitle"
                        style="@style/RobotoBold"
                        android:layout_column="0"
                        android:layout_row="4"
                        android:text="@string/gist_detail_updated_at"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvUpdatedAt"
                        style="@style/Roboto"
                        android:layout_column="1"
                        android:layout_row="4"
                        android:text="@string/not_available"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvDescriptionTitle"
                        style="@style/RobotoBold"
                        android:layout_column="0"
                        android:layout_row="5"
                        android:text="@string/gist_detail_description"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvDescription"
                        style="@style/Roboto"
                        android:layout_column="1"
                        android:layout_row="5"
                        android:maxWidth="@dimen/gist_detail_grid_column_max_width"
                        android:text="@string/not_available"
                        android:textSize="16sp" />

                </GridLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</android.support.v4.widget.NestedScrollView>

