<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rafael.alexandre.alves.gistlist.ui.detail.dialogFragments.history.tabs.HistoryTabFragment">

    <ScrollView
        android:id="@+id/svHistory"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:id="@+id/cvHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/distance_to_view_normal"
            android:background="@color/colorPrimary"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            card_view:cardBackgroundColor="@android:color/white"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="@dimen/card_view_elevation">

            <GridLayout
                android:id="@+id/gvUserData"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/distance_to_view_normal_x2"
                android:alignmentMode="alignBounds"
                android:columnCount="2">

                <TextView
                    android:id="@+id/tvLoginTitle"
                    style="@style/RobotoBold"
                    android:layout_column="0"
                    android:layout_row="0"
                    android:text="@string/gist_detail_login"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvLogin"
                    style="@style/Roboto"
                    android:layout_column="1"
                    android:layout_row="0"
                    android:maxWidth="@dimen/gist_detail_history_grid_column_max_width"
                    android:text="@string/not_available"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvVersionTitle"
                    style="@style/RobotoBold"
                    android:layout_column="0"
                    android:layout_row="1"
                    android:text="@string/gist_detail_history_version"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvVersion"
                    style="@style/Roboto"
                    android:layout_column="1"
                    android:layout_row="1"
                    android:maxWidth="@dimen/gist_detail_history_grid_column_max_width"
                    android:text="@string/not_available"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvCommittedAtTitle"
                    style="@style/RobotoBold"
                    android:layout_column="0"
                    android:layout_row="2"
                    android:text="@string/gist_detail_history_committed_at"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvCommittedAt"
                    style="@style/Roboto"
                    android:layout_column="1"
                    android:layout_row="2"
                    android:maxWidth="@dimen/gist_detail_history_grid_column_max_width"
                    android:text="@string/not_available"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvTotalChangesTitle"
                    style="@style/RobotoBold"
                    android:layout_column="0"
                    android:layout_row="3"
                    android:text="@string/gist_detail_history_total_changes"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvTotalChanges"
                    style="@style/Roboto"
                    android:layout_column="1"
                    android:layout_row="3"
                    android:text="@string/not_available"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvAdditionsTitle"
                    style="@style/RobotoBold"
                    android:layout_column="0"
                    android:layout_row="4"
                    android:text="@string/gist_detail_history_additions"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvAdditions"
                    style="@style/Roboto"
                    android:layout_column="1"
                    android:layout_row="4"
                    android:text="@string/not_available"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvDeletionsTitle"
                    style="@style/RobotoBold"
                    android:layout_column="0"
                    android:layout_row="5"
                    android:text="@string/gist_detail_history_deletions"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvDeletions"
                    style="@style/Roboto"
                    android:layout_column="1"
                    android:layout_row="5"
                    android:text="@string/not_available"
                    android:textSize="16sp" />

            </GridLayout>

        </android.support.v7.widget.CardView>

    </ScrollView>

</RelativeLayout>
